[package]
name = "nonempty"
version = "0.7.0"
description = "Correct by construction non-empty vector"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cloudhead/nonempty"


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
serde = { git = "https://github.com/mesalock-linux/serde-sgx.git", features = ["serde_derive"], optional = true }

[features]
serialize = ["serde"]

